[metadata]
name = archer
version = 0.1.0
description = Headless browser-like HTTP client with TLS & header emulation
long_description = file: README.md
long_description_content_type = text/markdown
author = QuantumLLC
license = MIT
platforms = any

[options]
packages = find:
install_requires =
    requests>=2.31.0
python_requires = >=3.8
